--- a/python/session-2016-03-idf/3_objets/ellipsoides/synope_session_2016_03_idf-TP3.ipynb
+++ b/python/session-2016-03-idf/3_objets/ellipsoides/synope_session_2016_03_idf-TP3.ipynb
@@ -11,67 +11,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initiation Python - Objets TP : ellipsoides"
+    "# Initiation Python - TP3: Objets"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1/6 : La définition de classes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "En partant du code placé dans le répertoire `calculatrice-0`, transformez la fonction `analyse()` de telle sorte qu'elle retourne une instance de la classe `Expression`, contenant deux variables : `opList`, liste des opérateurs `opList`, et `numList` la liste des nombres. Placez la définition de classe dans le même fichier que `analyse()`.\n",
+    "## 1/6 : Les classes de base\n",
     "\n",
-    "Dotez la classe `Expression` des méthodes suivantes :\n",
-    "* `paires()` : retourne une liste de paires (opérateur,nombre), chaque paire étant constituée du énième élément de `opList` et du enième élément correspondant dans la liste `numList` (ce que fait la fonction `zip()`). \n",
-    "* `display()` : affichage le contenu de l'expression.\n",
-    "* `init()` : pour affecter des valeurs aux attributs `opList` et `numList`."
+    "1. Quaternion\n",
+    "2. Superellipse\n",
+    "3. Superellipsoid"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On pourra alors réécrire la fonction `calcule()` ainsi :\n",
+    "Définissez ces trois classes de base, chacun dans un fichier à part."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Superellipse\n",
     "\n",
-    "```python\n",
-    "def calcule(chaine):\n",
-    "    global res\n",
-    "    expression = analyse(chaine)\n",
-    "    expression.display()\n",
-    "    for op, num in expression.paires():\n",
-    "\t    if op=='=': res = num\n",
-    "\t    else:\n",
-    "            fct = operateurs.operations[op]\n",
-    "\t        res = fct(res,num)\n",
-    "    print res\n",
-    "```"
+    "Attributs\n",
+    " \n",
+    "* n : nombre de points de discrétisation en theta\n",
+    "* rx : rayon suivant x\n",
+    "* ry : rayon suivant y\n",
+    "* m : puissance dans l'expression de la superellipse.\n",
+    "\n",
+    " \n",
+    " Méthodes\n",
+    "\n",
+    " * init: affecte les attributs n, rx, ry, m à partir des arguments spécifiés par l'utiliseateur pendant la création de l'objet.\n",
+    "\n",
+    " * surface: renvoie les points de la surface.\n",
+    "\n",
+    " * area: renvoie l'aire.\n",
+    " \n",
+    " "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comme le code client n'a plus besoin d'accéder directement aux attributs `opList` et `numList`, profitez-en pour rendre ces attributs pseudo-privés."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Crééz une classe `Calculatrice`, dotée d'une variable `res` initialisée à `0` par une méthode `init()`, et d'une méthode `calcule()` qui évalue une instance d'`Expression` et stocke le résultat dans `res` (en plus de l'afficher). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Dotez la classe `Expression` d'une constante PI. Modifiez `Expression.init()` afin qu'elle reconnaisse la valeur `PI`, et essayez d'évaluer l'expression `2*PI` avec votre calculatrice."
+    " "
    ]
   },
   {
@@ -220,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
