Try to move Binder Python specific stuff, and start reorganizing 1_fonctions/theory

--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_2_variables.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_2_variables.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initiation Python - Variables et fonctions ?/N - Types prédéfinis"
+    "# Initiation Python - Variables et fonctions 2/5 - Types prédéfinis"
    ]
   },
   {
