--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_3_entrees_sorties.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_3_entrees_sorties.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initiation Python - Variables et fonctions N/N - Compléments"
+    "# Initiation Python - Variables et fonctions 5/5 - Compléments"
    ]
   },
   {
@@ -22,32 +22,215 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "s1 = \"{0} is better than {1}\".format(\"emacs\", \"vim\")\n",
-    "s2 = \"{1} is better than {0}\".format(\"emacs\", \"vim\")\n",
-    "print(\"1> «\", s1, \"» vs «\", s2, \"»\")\n",
-    "pi = 3.14159\n",
-    "print(\"2> pi = %1.2f \" % pi)\n",
-    "capital_country = {\"United States\" : \"Washington\", \n",
-    "                   \"US\" : \"Washington\", \n",
-    "                   \"Canada\" : \"Ottawa\",\n",
-    "                   \"Germany\": \"Berlin\",\n",
-    "                   \"France\" : \"Paris\",\n",
-    "                   \"England\" : \"London\",\n",
-    "                   \"UK\" : \"London\",\n",
-    "                   \"Switzerland\" : \"Bern\",\n",
-    "                   \"Austria\" : \"Vienna\",\n",
-    "                   \"Netherlands\" : \"Amsterdam\"}\n",
-    "\n",
-    "print(\"3> Countries and their capitals:\")\n",
-    "for c in capital_country:\n",
-    "    print(\"{country}: {capital}\".format(country=c, capital=capital_country[c]))\n"
+    "La méthode `str.format()` permet de construire une chaîne de caractères complexe à partir d'une chaîne qui décrit le format et d'une collection de valeurs données en arguments. La chaîne de format doit comprendre des accolades `{}` aux emplacements ou l'on veut substituer les valeurs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'=== Hello world ! ==='"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'{} {} ! {}'.format('===','Hello world','===')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On peut utiliser des numéros si on veut répéter ou inverser l'ordre de certaines valeurs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'=== Hello world ! ==='"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'{0} {1} ! {0}'.format('===','Hello world')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On peut aussi utiliser des noms si les arguments sont nommés."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'=== Hello world ! ==='"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'{cadre} {texte} ! {cadre}'.format(texte='Hello world',cadre='===')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'=== Hello world ! ==='"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arguments = { 'texte': 'Hello world', 'cadre': '===' }\n",
+    "'{cadre} {texte} ! {cadre}'.format(**arguments)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour donner des instructions plus précises sur la façon de formatter une valeur précise, on peut ajouter un double-point `:` suivi d'un ensemble de caractères à la façon de la fonction `printf()` du langage C."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Entiers : -002 10 F'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Entiers : {:04d} {:o} {:X}\".format(-2,8,15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Flottants :  6.000000E-06 +4.500 6.000000E-06'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Flottants :  {1:-E} {0:+2.3f} {1:-E}\".format(4.5,0.000006)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Avec noms : texte 10 texte'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Avec noms : {ch:s} {val:d} {ch:s}\".format(ch='texte',val=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il est encore courant de rencontrer la méthode de formattage historique de Python, qui reposait sur l'opérateur `%`. Bien que plus pratique en apparence, l'usage de cet opérateur est maintenant déconseillé."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pi = 3.14 '"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"pi = %1.2f \" % 3.14159"
    ]
   },
   {
@@ -58,21 +241,32 @@
     }
    },
    "source": [
-    "# Récursivité\n",
+    "## Récursivité\n",
     "\n",
     "Une fonction peut s'appeler elle-même, directement ou indirectement."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def fact(n):\n",
     "    if n <= 1:\n",
@@ -91,19 +285,27 @@
     }
    },
    "source": [
-    "Pensez à une condition d'arrêt."
+    "Pensez à placer une condition d'arrêt."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erreur: \"maximum recursion depth exceeded\"\n"
+     ]
+    }
+   ],
    "source": [
     "def inf(n):\n",
     "    return inf(n + 1)\n",
@@ -111,7 +313,7 @@
     "try:\n",
     "    inf(0)\n",
     "except RuntimeError as e:\n",
-    "    print(\"Erreur: \\\"{0}\\\"\".format(e))"
+    "    print('Erreur: \"{0}\"'.format(e))"
    ]
   },
   {
@@ -123,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -149,19 +351,27 @@
     }
    },
    "source": [
-    "# Une fonction est une valeur"
+    "## Une fonction est une valeur"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
    "source": [
     "def fa(a):\n",
     "    return a ** 2\n",
@@ -172,14 +382,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "def jAccepteUneFonction(f, v):\n",
     "    return f(v)\n",
@@ -196,19 +415,27 @@
     }
    },
    "source": [
-    "# Autre définition de fonctions : les *lambdas*"
+    "## Autre définition de fonctions : les *lambdas*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
    "source": [
     "maVar4 = lambda a : a * 2\n",
     "print(maVar4(21))"
@@ -222,7 +449,7 @@
     }
    },
    "source": [
-    "# Les prédicats\n",
+    "## Les prédicats\n",
     "\n",
     "Un prédicat est une fonction qui retourne \"Vrai\" ou \"Faux\" en fonction de critères qui lui sont propres.\n",
     "Idéalement, la valeur \"Vrai\" ou \"Faux\" du prédicat ne doit dépendre que des arguments de celui-ci."
@@ -230,14 +457,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False True\n"
+     ]
+    }
+   ],
    "source": [
     "# Prédicat qui nous dit si la valeur de l'entier a est plus grande que 10\n",
     "def auDessusDe10(a):\n",
@@ -259,14 +494,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<filter object at 0x1041b8320>\n",
+      "[1764, 49, 25, 25, 64]\n"
+     ]
+    }
+   ],
    "source": [
     "# Prédicat qui nous dit si la valeur de l'entier a est plus grande que 10\n",
     "def auDessusDe10(a):\n",
@@ -286,19 +530,28 @@
     }
    },
    "source": [
-    "# Prédicats anonymes: les lambdas"
+    "## Prédicats anonymes: les lambdas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<filter object at 0x1041b8dd8>\n",
+      "[-16, -9]\n"
+     ]
+    }
+   ],
    "source": [
     "monTableau = [ 1764, 49, 25, 9, 0, -16, 25, -9, 4, 64 ]\n",
     "f=filter(lambda a : a < 0, monTableau)\n",
@@ -322,14 +575,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-16, -9]\n",
+      "[-16, -9]\n"
+     ]
+    }
+   ],
    "source": [
     "f = filter(lambda a : a < 0, monTableau)\n",
     "# est équivalent à\n",
@@ -383,14 +645,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42, 7, 5, 3, 0, nan, 5, nan, 2, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "monTableau = [ 1764, 49, 25, 9, 0, -16, 25, -9, 4, 64 ]\n",
@@ -411,14 +681,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1847\n"
+     ]
+    }
+   ],
    "source": [
     "import functools\n",
     "monTableau = [ 1764, 49, 25, 9 ]\n",
@@ -428,14 +706,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " - 1764 + 49\n",
+      " - 1813 + 25\n",
+      " - 1838 + 9\n",
+      "1847\n"
+     ]
+    }
+   ],
    "source": [
     "import functools\n",
     "\n",
@@ -455,7 +744,7 @@
    },
    "source": [
     "<center>\n",
-    "![Illustration reduce](./Figures/fonctions_reduce.png \"Illustration reduce\")\n",
+    "![Illustration reduce](./img/fonctions_reduce.png \"Illustration reduce\")\n",
     "</center>"
    ]
   },
@@ -467,12 +756,12 @@
     }
    },
    "source": [
-    "# Les fonctions d'entrée-sortie"
+    "## Les fichiers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -495,14 +784,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ceci est la premiere ligne du fichier : <Ceci est un fichier\n",
+      ">\n",
+      "ceci sont les 5 caractères suivants : <avec >\n",
+      "ceci est le reste du fichier : <\n",
+      "['du contenu ...!1\\n', \" et encore d'autres informations\\n\", 'inutiles au possible']\n",
+      ">\n"
+     ]
+    }
+   ],
    "source": [
     "fin = open(\"Monfichier\", 'r')\n",
     "ligne = fin.readline()\n",
@@ -530,17 +832,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27 <class 'int'>\n",
+      "12.96 <class 'float'>\n",
+      "[5, 4.83, 'Mathieu'] <class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
-    "a, b, c = 27, 12.96, [5, 4.83, \"René\"]\n",
+    "a, b, c = 27, 12.96, [5, 4.83, \"Mathieu\"]\n",
     "f = open('donnees_test', 'wb')\n",
     "pickle.dump(a, f)\n",
     "pickle.dump(b, f)\n",
@@ -573,14 +885,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'utf-8' codec can't decode byte 0x80 in position 0: invalid start byte\n"
+     ]
+    }
+   ],
    "source": [
     "fh = None\n",
     "try:\n",
@@ -596,11 +916,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'utf-8' codec can't decode byte 0x80 in position 0: invalid start byte\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    with open(\"donnees_test\") as fh:\n",
