--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_4_fonctions.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_fonctions_4_fonctions.ipynb
@@ -11,24 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initiation Python - Variables et fonctions ?/N - Fonctions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "<center>\n",
-    "**Formation Python**\n",
-    "</center>\n",
-    "&nbsp;\n",
-    "<center>\n",
-    "*Les fonctions*\n",
-    "</center>"
+    "# Initiation Python - Variables et fonctions 4/5 - Fonctions"
    ]
   },
   {
