--- a/python/session-2016-03-idf/1_fonctions/theorie/synope_session_2016_03_idf.ipynb
+++ b/python/session-2016-03-idf/1_fonctions/theorie/synope_session_2016_03_idf.ipynb
@@ -80,7 +80,7 @@
     "1. Les bases : intro, variables, types, fonctions.\n",
     "2. Côté système d'exploitation : modules, paquets et distribution.\n",
     "3. La programmation orientée objet.\n",
-    "4. Outillage et bonnes pratiques : tests, documentation, journalisation, Python 2 vs 3.\n",
+    "4. Outillage et bonnes pratiques : style, tests, journalisation, , documentation, argparse, Python 2 vs 3.\n",
     "5. Calcul : numpy et matplotlib.\n",
     "6. Mini-projet autour du billard."
    ]
