--- a/python/session-2016-03-idf/3_objets/ellipsoides/synope_session_2016_03_idf-TP3.ipynb
+++ b/python/session-2016-03-idf/3_objets/ellipsoides/synope_session_2016_03_idf-TP3.ipynb
@@ -53,7 +53,54 @@
     " * surface: renvoie les points de la surface.\n",
     "\n",
     " * area: renvoie l'aire.\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Superellipsoid\n",
+    "\n",
+    "Attributs\n",
     " \n",
+    " \n",
+    " * n : nombre de points de discrétisation en theta et en phi\n",
+    " * rx : rayon suivant x\n",
+    " * ry : rayon suivant y\n",
+    " * rz : rayon suivant z\n",
+    " * m1 : puissance dans l'expression de la superellipse\n",
+    " * m2 : paramètre qui détérmine le \"balayage\" vertical \n",
+    " \n",
+    " \n",
+    " Méthodes\n",
+    " \n",
+    "\n",
+    " * init: affecte les attributs à partir des arguments pendant la création de l'objet.\n",
+    "\n",
+    " * surface : renvoie le nuage de points de la surface.\n",
+    "\n",
+    " * volume : renvoie le volume de la superellipsoide.\n",
+    "\n",
+    "\n",
+    "### Quaternion\n",
+    "\n",
+    "\n",
+    "* set_angle\n",
+    "* rotate\n",
+    "* conjugate\n",
+    "* normalize\n",
+    "* x, y, z\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " "
    ]
   },
@@ -61,53 +108,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " "
+    "## 2/6 : Classes dérivées"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2/6 : Les méthodes spéciales"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Dotez la classe Expression d'un constructeur à partir d'une chaîne de caractère, (et y fondre la fonction `analyse()`).\n",
-    "1. Transfomez la méthode `display()` en méthode `__str__()`.\n",
-    "1. Dotez la classe `Expression` d'un comportement de séquence (Transformez `paires()` en `__getitem__()`).\n",
-    "1. Dotez la classe `Calculatrice` d'un constructeur, puis transformez là en objet-fonction."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "le fichier `calculatrice.py` contient à présent :\n",
-    "```python\n",
-    "    .....\n",
-    "    expr = Expression(chaine)\n",
-    "    print expr\n",
-    "    for op, num in expr:\n",
-    "\t    if op=='=': res = num\n",
-    "\t    else:\n",
-    "            fct = operateurs.operations[op]\n",
-    "            res = fct(res,num)\n",
-    "    .....\n",
-    "```\n",
+    "Définissez la classe dérivée *Circle*. Elle contient une méthode supplementaire:\n",
     "\n",
-    "et le fichier `main.py` :\n",
-    "```python\n",
-    "calc = Calculatrice()\n",
     "\n",
-    "print\n",
-    "ligne=raw_input(\">>> \")\n",
-    "while ligne!='OFF':\n",
-    "    calc(expr)\n",
-    "    ligne=raw_input(\">>> \")\n",
-    "```"
+    "Pour la classe dérivée de Superellipse: \n",
+    " \n",
+    " * perimeter: renvoie le perimètre.\n",
+    "\n",
+    "\n",
+    "Pour la classe dérivée de Superellipsoid:   \n",
+    "   \n",
+    "  * area:  renvoie la surface de la sphère. Vous aurrez besoin de la fonction mathematique *beta*: \n",
+    "  \n",
+    "  \n",
+    "    * beta_func(r, t)"
    ]
   },
   {
@@ -120,22 +141,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "1. Dotez la classe `Expression` d'un opérateur `+` de concaténation.\n",
-    "1. Dotez la classe `Expression` d'une méthode de comparaison `==`.\n",
-    "1. Ajouter le code suivant en fin de `analyseur.py` afin de vérifier les opérations ci-dessus :\n",
-    "```python\n",
-    "    if __name__ == \"__main__\":\n",
-    "        expr1 = Expression(\"+1+2\")\n",
-    "        expr2 = Expression(\"+3+4\")\n",
-    "        expr3 = expr1+expr2\n",
-    "        expr4 = Expression(\"+1+2+3+4\")\n",
-    "        print expr3\n",
-    "        print expr4\n",
-    "        if (expr3==expr4): print \"Concatenation et comparaison OK\"\n",
-    "        else: print \"PROBLEME de concatenation et comparaison\"\n",
-    "```\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -147,41 +153,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "1. Ajoutez dans `calculatrice.py` une classe dérivée `CalculatriceEtendue`, qui ajoute la possibilité de demander l'inverse du dernier résultat obtenu, en tapant 'inv' (et rien que ça), ou bien sa racine carrée en tapant 'sqrt'. Traiter ces cas particuliers dans la méthode `__call__` de la nouvelle classe  `CalculatriceEtendue` (pas dans la classe `Expression`).\n",
-    "1. Dans `main.py`, utilisez et testez la nouvelle calculatrice."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5/6 : Sauvegarde et reconstruction d'objets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Faites en sorte que le programme principal stocke l'état courant de la calculatrice avant de se terminer, et la restaure telle quelle à la prochaine éxecution. Servez vous par exemple d'un fichier `main.pkl`."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 6/6 : Quelques concepts avancés"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Dotez la classe Expression d'une variable PI. Modifiez `Expression.__init__()` afin qu'elle reconnaisse la valeur PI, et essayez d'évaluer l'expression 2*PI avec votre calculatrice.\n",
-    "1. Observez ce qui se passe si la classe `Calculatrice` n'hérite plus de la classe `object`.\n",
-    "1. Définir `Expression.__slots__` et controllez son bon fonctionnement.\n",
-    "1. Protéger la valeur `PI`, supposée constante, en la rendant pseudo-privée et en fournissant une méthode statique de récupération de la valeur. Utilisez la notation \"décorateur\" pour cette méthode.\n",
-    "1. A la place de la méthode `Calculatrice.getres()`, ajouter une propriété `res`, accessible en lecture seule."
    ]
   },
   {
