--- a/python/session-2016-03-idf/3_objets/ellipsoides/synope_session_2016_03_idf-TP3.ipynb
+++ b/python/session-2016-03-idf/3_objets/ellipsoides/synope_session_2016_03_idf-TP3.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1/6 : Les classes de base\n",
+    "## 1/3 : Les classes de base\n",
     "\n",
     "1. Quaternion\n",
     "2. Superellipse\n",
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Définissez ces trois classes de base, chacun dans un fichier à part."
+    "Définissez ces trois classes de base, chacune dans un fichier à part."
    ]
   },
   {
@@ -48,11 +48,11 @@
     " \n",
     " Méthodes\n",
     "\n",
-    " * init: affecte les attributs n, rx, ry, m à partir des arguments spécifiés par l'utiliseateur pendant la création de l'objet.\n",
+    " * Le constructeur \\__init\\__: affecte les attributs de la classe n, rx, ry, m à partir des arguments spécifiés par l'utiliseateur.\n",
     "\n",
-    " * surface: renvoie les points de la surface.\n",
+    " * surface: renvoie les points de la surface (deux listes x,y).\n",
     "\n",
-    " * area: renvoie l'aire.\n",
+    " * area: renvoie l'aire (un scalaire).\n",
     " "
    ]
   },
@@ -76,15 +76,19 @@
     " Méthodes\n",
     " \n",
     "\n",
-    " * init: affecte les attributs à partir des arguments pendant la création de l'objet.\n",
+    " * \\__init\\__: affecte les attributs de la classe à partir des arguments du constructeur.\n",
     "\n",
-    " * surface : renvoie le nuage de points de la surface.\n",
+    " * surface : renvoie le nuage de points de la surface: trois listes a 2 dimensions (listes imbriquées) x,y,z.\n",
     "\n",
     " * volume : renvoie le volume de la superellipsoide.\n",
     "\n",
     "\n",
     "### Quaternion\n",
     "\n",
+    "Attributs\n",
+    "\n",
+    "* coords (x,y,z)\n",
+    "* w \n",
     "\n",
     "* set_angle\n",
     "* rotate\n",
@@ -108,58 +112,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2/6 : Classes dérivées"
+    "## 2/3 : Classes dérivées"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Définissez la classe dérivée *Circle*. Elle contient une méthode supplementaire:\n",
-    "\n",
-    "\n",
-    "Pour la classe dérivée de Superellipse: \n",
+    "Définissez la classe dérivée *Circle* qui hérite de la classe *Superellipse*. Elle surcharge son constructeur \\__init\\__ en appelant celui du parent avec rx=ry=r et m=2. Elle contient une méthode supplementaire:\n",
     " \n",
-    " * perimeter: renvoie le perimètre.\n",
+    " \n",
+    " * perimeter: renvoie le périmètre du cercle.\n",
     "\n",
     "\n",
-    "Pour la classe dérivée de Superellipsoid:   \n",
-    "   \n",
-    "  * area:  renvoie la surface de la sphère. Vous aurrez besoin de la fonction mathematique *beta*: \n",
+    "Définissez la classe dérivée *Sphere* qui hérite de la classe *Superellipsoid*. Elle surcharge son constructeur \\__init\\__ en appelant celui du parent avec rx=ry=rz=r et m1=m2=2. Elle contient une méthode supplementaire:\n",
+    " \n",
+    " \n",
+    "  * area: renvoie l'aire de la sphère.\n",
+    "  \n",
+    "  Vous aurrez besoin de définir la fonction mathématique la *fonction bêta*: \n",
     "  \n",
     "  \n",
-    "    * beta_func(r, t)"
+    "     - beta_func(r, t)\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3/6 : Les objets composés"
+    "## 3/3 : Demos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## 4/6 : L'héritage entre classes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6/6 : Quelques concepts avancés"
+    "Créez 2 scripts demo: superellipsoid.py et quaternion.py. Le premier:\n",
+    "\n",
+    " 1. Crée une superellipse et affiche à l'ecran son aire; \n",
+    " 2. Crée un cercle et affiche à l'ecran son aire et son périmètre;\n",
+    " 3. Crée une superellipsoide et affiche à l'ecran son volume;\n",
+    " 4. Crée une sphère et affiche à l'ecran son volume et son aire.\n",
+    " \n",
+    " "
    ]
   },
   {
