update TP3 demo quaternion

--- a/python/session-2016-03-idf/3_objets/ellipsoides/synope_session_2016_03_idf-TP3.ipynb
+++ b/python/session-2016-03-idf/3_objets/ellipsoides/synope_session_2016_03_idf-TP3.ipynb
@@ -149,14 +149,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Créez 2 scripts demo: superellipsoid.py et quaternion.py. Le premier:\n",
+    "Créez 2 scripts demo: superellipsoid.py et quaternion.py. \n",
+    "\n",
+    "Le premier:\n",
     "\n",
     " 1. Crée une superellipse et affiche à l'ecran son aire; \n",
     " 2. Crée un cercle et affiche à l'ecran son aire et son périmètre;\n",
     " 3. Crée une superellipsoide et affiche à l'ecran son volume;\n",
     " 4. Crée une sphère et affiche à l'ecran son volume et son aire.\n",
     " \n",
-    " "
+    "\n",
+    "Le deuxième:\n",
+    "\n",
+    " 1. Crée un quaternion *q* avec la classe *Quaternion*. \n",
+    " 2. Affiche à l'ecran ses coordonnées avec la fonction *print* de python (qui appele la méthode \\__str\\__() de la classe *Quaternion*).\n",
+    " 3. Fixe un angle (e.g. pi/4);\n",
+    " 4. Normalize et affiche à l'ecran les nouvelles coordonnées;\n",
+    " 5. Effectue une rotation du produit (q\\*q) et affiche à l'ecran les coordonnées.\n"
    ]
   },
   {
