--- a/python/session-2016-03-idf/5_calcul/ellipsoides/synope_session_2016_03_idf-TP5.ipynb
+++ b/python/session-2016-03-idf/5_calcul/ellipsoides/synope_session_2016_03_idf-TP5.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1/2 : Modifications dans les méthodes des classes"
+    "## 1/3 : Modifications dans les méthodes des classes"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2/2 : Demos: graphiques"
+    "## 2/3 : Demos: vos premiers graphiques"
    ]
   },
   {
@@ -98,6 +98,39 @@
    "source": [
     "\n",
     "N'oubliez pas la fonction plt.show() pour afficher les graphiques !"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3/3 : Animation de la rotation d'une superellipsoid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Créez une animation d'une superellipsoid (script demos/animate_superellipsoid.py). \n",
+    "\n",
+    " 1. Créez un objet de la classe *Superellipsoid*;\n",
+    " 2. Génèrez ses coordonnées x, y, z avec *surface_with_square()*;\n",
+    " 3. Créez un objet de la classe *Quaternion* et fixez un angle avec sa méthode *set_angle* (e.g. np.pi/10))\n",
+    " 4. Définissez la fonction  *animate* qui effectue une animation par une rotation d'une superellipse. Lorsque le nombre d'images est un multiple de 10, on change l'axe de rotation.\n",
+    " 5. Créez un axe 3D avec *add_subplot* en projection='3d' \n",
+    " 6. Appelez la fonction *animation.FuncAnimation* de matplotlib et lui donner en argument la fonction *animate()*. \n",
+    " \n",
+    " La fonction  *animate* :\n",
+    " \n",
+    " \n",
+    " \n",
+    " 1. prend le nombre *i* en argument\n",
+    " * si i est un multiple de 10, fixe un nouvel angle avec *set_angle* (aléatoire, avec np.random.random(3)) \n",
+    " * effectue une normalization\n",
+    " * effectue une rotation\n",
+    " * trace les nouvelles coordonnées x, y, z avec *plot_wireframe*\n",
+    "\n",
+    "\n"
    ]
   },
   {
